assignment2/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from e:\ppl\assignment2\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'Body'", "'Else'", "'EndFor'", 
                     "'If'", "'Var'", "'EndDo'", "'Break'", "'ElseIf'", 
                     "'EndWhile'", "'Parameter'", "'While'", "'Continue'", 
                     "'EndBody'", "'For'", "'Return'", "'True'", "'Do'", 
                     "'EndIf'", "'Function'", "'Then'", "'False'", "'+'", 
                     "'+.'", "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'=/='", "'<.'", "'>.'", "'<=.'", 
                     "'>=.'", "'='", "'('", "')'", "'['", "']'", "':'", 
                     "'.'", "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "INT_LIT", "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", 
                      "COMMENT", "BODY", "ELSE", "ENDFOR", "IF", "VAR", 
                      "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", "PARAM", "WHILE", 
                      "CONTINUE", "ENDBODY", "FOR", "RETURN", "TRUE", "DO", 
                      "ENDIF", "FUNC", "THEN", "FALSE", "ADD", "FADD", "SIGN", 
                      "FSIGN", "MUL", "FMUL", "DIV", "FDIV", "MOD", "NOT", 
                      "AND", "OR", "ISEQUAL", "ISDIF", "SMALLER", "BIGGER", 
                      "EQUALORSMALLER", "EQUALORBIGGER", "FISDIF", "FSMALLER", 
                      "FBIGGER", "FEQUALORSMALLER", "FEQUALORBIGGER", "ASSIGN", 
                      "LB", "RB", "LS", "RS", "COLON", "DOT", "COMMA", "SEMI", 
                      "LC", "RC", "ID", "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_variable = 2
    RULE_full_variable = 3
    RULE_variable_list = 4
    RULE_func_decl = 5
    RULE_func_name = 6
    RULE_func_param = 7
    RULE_func_body = 8
    RULE_param_list = 9
    RULE_expr_list = 10
    RULE_expr = 11
    RULE_logic_expr = 12
    RULE_add_expr = 13
    RULE_mul_expr = 14
    RULE_not_expr = 15
    RULE_sign_expr = 16
    RULE_element_expr = 17
    RULE_func_expr = 18
    RULE_parenthesed_expr = 19
    RULE_func_call = 20
    RULE_index_operators = 21
    RULE_array_element = 22
    RULE_stmts = 23
    RULE_other_stmt = 24
    RULE_vardecl_stmt = 25
    RULE_assign_stmt = 26
    RULE_if_stmt = 27
    RULE_for_stmt = 28
    RULE_while_stmt = 29
    RULE_do_while_stmt = 30
    RULE_break_stmt = 31
    RULE_continue_stmt = 32
    RULE_call_stmt = 33
    RULE_return_stmt = 34
    RULE_array = 35
    RULE_literal_element = 36
    RULE_literal = 37

    ruleNames =  [ "program", "var_decl", "variable", "full_variable", "variable_list", 
                   "func_decl", "func_name", "func_param", "func_body", 
                   "param_list", "expr_list", "expr", "logic_expr", "add_expr", 
                   "mul_expr", "not_expr", "sign_expr", "element_expr", 
                   "func_expr", "parenthesed_expr", "func_call", "index_operators", 
                   "array_element", "stmts", "other_stmt", "vardecl_stmt", 
                   "assign_stmt", "if_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "call_stmt", "return_stmt", 
                   "array", "literal_element", "literal" ]

    EOF = Token.EOF
    INT_LIT=1
    FLOAT_LIT=2
    BOOL_LIT=3
    STRING_LIT=4
    COMMENT=5
    BODY=6
    ELSE=7
    ENDFOR=8
    IF=9
    VAR=10
    ENDDO=11
    BREAK=12
    ELSEIF=13
    ENDWHILE=14
    PARAM=15
    WHILE=16
    CONTINUE=17
    ENDBODY=18
    FOR=19
    RETURN=20
    TRUE=21
    DO=22
    ENDIF=23
    FUNC=24
    THEN=25
    FALSE=26
    ADD=27
    FADD=28
    SIGN=29
    FSIGN=30
    MUL=31
    FMUL=32
    DIV=33
    FDIV=34
    MOD=35
    NOT=36
    AND=37
    OR=38
    ISEQUAL=39
    ISDIF=40
    SMALLER=41
    BIGGER=42
    EQUALORSMALLER=43
    EQUALORBIGGER=44
    FISDIF=45
    FSMALLER=46
    FBIGGER=47
    FEQUALORSMALLER=48
    FEQUALORBIGGER=49
    ASSIGN=50
    LB=51
    RB=52
    LS=53
    RS=54
    COLON=55
    DOT=56
    COMMA=57
    SEMI=58
    LC=59
    RC=60
    ID=61
    WS=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    UNTERMINATED_COMMENT=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 76
                self.var_decl()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNC:
                self.state = 82
                self.func_decl()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_list(self):
            return self.getTypedRuleContext(BKITParser.Variable_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(BKITParser.VAR)
            self.state = 91
            self.match(BKITParser.COLON)
            self.state = 92
            self.variable_list()
            self.state = 93
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LS(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LS)
            else:
                return self.getToken(BKITParser.LS, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def RS(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RS)
            else:
                return self.getToken(BKITParser.RS, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable




    def variable(self):

        localctx = BKITParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(BKITParser.ID)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LS:
                self.state = 96
                self.match(BKITParser.LS)
                self.state = 97
                self.match(BKITParser.INT_LIT)
                self.state = 98
                self.match(BKITParser.RS)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(BKITParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_full_variable




    def full_variable(self):

        localctx = BKITParser.Full_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_full_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.variable()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 105
                self.match(BKITParser.ASSIGN)
                self.state = 106
                self.literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def full_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Full_variableContext)
            else:
                return self.getTypedRuleContext(BKITParser.Full_variableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_list




    def variable_list(self):

        localctx = BKITParser.Variable_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.full_variable()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 110
                self.match(BKITParser.COMMA)
                self.state = 111
                self.full_variable()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_name(self):
            return self.getTypedRuleContext(BKITParser.Func_nameContext,0)


        def func_body(self):
            return self.getTypedRuleContext(BKITParser.Func_bodyContext,0)


        def func_param(self):
            return self.getTypedRuleContext(BKITParser.Func_paramContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_decl




    def func_decl(self):

        localctx = BKITParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.func_name()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAM:
                self.state = 118
                self.func_param()


            self.state = 121
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(BKITParser.FUNC, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_name




    def func_name(self):

        localctx = BKITParser.Func_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BKITParser.FUNC)
            self.state = 124
            self.match(BKITParser.COLON)
            self.state = 125
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAM(self):
            return self.getToken(BKITParser.PARAM, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_param




    def func_param(self):

        localctx = BKITParser.Func_paramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(BKITParser.PARAM)
            self.state = 128
            self.match(BKITParser.COLON)
            self.state = 129
            self.param_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def stmts(self):
            return self.getTypedRuleContext(BKITParser.StmtsContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_body




    def func_body(self):

        localctx = BKITParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(BKITParser.BODY)
            self.state = 132
            self.match(BKITParser.COLON)
            self.state = 133
            self.stmts()
            self.state = 134
            self.match(BKITParser.ENDBODY)
            self.state = 135
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_param_list




    def param_list(self):

        localctx = BKITParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.variable()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 138
                self.match(BKITParser.COMMA)
                self.state = 139
                self.variable()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExprContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_expr_list




    def expr_list(self):

        localctx = BKITParser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.expr()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 146
                self.match(BKITParser.COMMA)
                self.state = 147
                self.expr()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Logic_exprContext)
            else:
                return self.getTypedRuleContext(BKITParser.Logic_exprContext,i)


        def ISEQUAL(self):
            return self.getToken(BKITParser.ISEQUAL, 0)

        def ISDIF(self):
            return self.getToken(BKITParser.ISDIF, 0)

        def SMALLER(self):
            return self.getToken(BKITParser.SMALLER, 0)

        def BIGGER(self):
            return self.getToken(BKITParser.BIGGER, 0)

        def EQUALORBIGGER(self):
            return self.getToken(BKITParser.EQUALORBIGGER, 0)

        def EQUALORSMALLER(self):
            return self.getToken(BKITParser.EQUALORSMALLER, 0)

        def FISDIF(self):
            return self.getToken(BKITParser.FISDIF, 0)

        def FSMALLER(self):
            return self.getToken(BKITParser.FSMALLER, 0)

        def FBIGGER(self):
            return self.getToken(BKITParser.FBIGGER, 0)

        def FEQUALORBIGGER(self):
            return self.getToken(BKITParser.FEQUALORBIGGER, 0)

        def FEQUALORSMALLER(self):
            return self.getToken(BKITParser.FEQUALORSMALLER, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expr




    def expr(self):

        localctx = BKITParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.logic_expr(0)
                self.state = 154
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ISEQUAL) | (1 << BKITParser.ISDIF) | (1 << BKITParser.SMALLER) | (1 << BKITParser.BIGGER) | (1 << BKITParser.EQUALORSMALLER) | (1 << BKITParser.EQUALORBIGGER) | (1 << BKITParser.FISDIF) | (1 << BKITParser.FSMALLER) | (1 << BKITParser.FBIGGER) | (1 << BKITParser.FEQUALORSMALLER) | (1 << BKITParser.FEQUALORBIGGER))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 155
                self.logic_expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.logic_expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_expr(self):
            return self.getTypedRuleContext(BKITParser.Add_exprContext,0)


        def logic_expr(self):
            return self.getTypedRuleContext(BKITParser.Logic_exprContext,0)


        def AND(self):
            return self.getToken(BKITParser.AND, 0)

        def OR(self):
            return self.getToken(BKITParser.OR, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_logic_expr



    def logic_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Logic_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_logic_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.add_expr(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Logic_exprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logic_expr)
                    self.state = 163
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 164
                    _la = self._input.LA(1)
                    if not(_la==BKITParser.AND or _la==BKITParser.OR):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 165
                    self.add_expr(0) 
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Add_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mul_expr(self):
            return self.getTypedRuleContext(BKITParser.Mul_exprContext,0)


        def add_expr(self):
            return self.getTypedRuleContext(BKITParser.Add_exprContext,0)


        def ADD(self):
            return self.getToken(BKITParser.ADD, 0)

        def FADD(self):
            return self.getToken(BKITParser.FADD, 0)

        def SIGN(self):
            return self.getToken(BKITParser.SIGN, 0)

        def FSIGN(self):
            return self.getToken(BKITParser.FSIGN, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_add_expr


